# mando-sub-mem

./: .gitignore  LICENSE  deck.py  ext.py  extract_sub.sh  main.py  models.py  pyproject.toml  seg.py  vendor.sh  vendors.py
src/mandosubmem/: cli.py  deck.py  ext.py
src/mandosubmem/deckbuilder/: base.py  entrystore.py  zh_builder.py
src/mandosubmem/deckbuilder/models/: base.py
src/mandosubmem/ui/: __init__.py  importdialog.py  importdialog.ui
src/subtitleterms/: __init__.py  cli.py
src/subtitleterms/deckbuilder/: base.py
src/subtitleterms/ui/: __init__.py  importdialog.py  importdialog.ui
tests/: test_ext.py  tests_ext.py
