[project]
name = "mandosubmem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Derek Enlow", email = "derekenlow@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "htpy>=25.12.0",
    "pyhanlp>=0.1.89",
]

[project.scripts]
mandosubmem = "mandosubmem.cli:cli"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
